# SchoolManagementSystem

./: .babelrc.js  .env.example  .eslintignore  .eslintrc.json  .eslintrc.yml  .gitignore  LICENSE  README.md  Synopsis.docx  constants.json.example  generate_secret_key.py  logging.yaml  manage.py  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: codeql-analysis.yml
SampleData/: assignments.csv  classes.csv  subjects.csv  users.csv
SchoolManagementSystem/: __init__.py  asgi.py  redis.py  settings.py  urls.py  wsgi.py
_utils/: decorators.py
admin/: permissions.py  urls.py
admin/views/: user.py
administration/: apps.py  authentication.py  managers.py  middleware.py  models.py  serializers.py  urls.py  views.py
administration/migrations/: 0001_initial.py  0002_alter_user_is_superuser.py  0003_alter_user_ip_address.py  0004_auto_20211123_1902.py  0005_auto_20211125_1438.py  0006_alter_authorizationmodel_user.py
api/: apps.py  models.py  permissions.py  urls.py
api/migrations/: 0001_initial.py  0002_initial.py  0002_subject_class.py  0002_timetablemodel.py  0003_assignment.py
api/views/: authorize.py  unauthorize.py
authentication/: authentication.py  backend.py  urls.py
authentication/views/: authenticate.py  authorize.py  refresh_token.py  reset_password.py  unauthenticate.py  unauthorize.py
components/: footer.jsx  imageSlider.jsx  index.js  navbar.jsx  sidebar.jsx
core/: fake_settings.py  redis.py  settings.py  urls.py  wsgi.py
overwrites/: apps.py
pages/: _app.jsx  _document.jsx  about.mdx  contact.jsx  gallery.jsx  index.jsx  login.jsx  logout.jsx  reset-password.jsx
pages/@me/: profile.jsx
pages/dashboard/: index.js  index.jsx
root/: apps.py  managers.py  models.py  serializers.py  validators.py
root/migrations/: 0001_initial.py  0002_alter_user_avatar.py  (+2 more)
src/: App.jsx  App.min.css  App.scss  constants.js  constants.js.example  index.js  utils.js
src/routes/: login.jsx  (+1 more)
styles/: globals.scss
templates/: resetpasswordemailtemplate.html
utils/: errors.py  exceptions.py  files.py  http_responses.py  permissions.py
(+87 files in other folders)
